# apps/api/src/media/schemas.ts
@@ -26,6 +26,17 @@ export interface MediaResponse {
     group?: string;
 }
 
+export interface MediaListItemResponse {
+    mediaId: string;
+    originalFileName: string;
+    mimeType: string;
+    size: number;
+    access: AccessControl;
+    thumbnail: string;
+    caption?: string;
+    group?: string;
+}
+
 export const mediaResponseSchema = Joi.object<MediaResponse>({
     mediaId: Joi.string().required(),
     originalFileName: Joi.string().required(),
@@ -33,7 +44,18 @@ export const mediaResponseSchema = Joi.object<MediaResponse>({
     size: Joi.number().required(),
     access: Joi.string().valid("public", "private").required(),
     file: Joi.string().uri().required(),
-    thumbnail: Joi.string().uri().optional(),
+    thumbnail: Joi.string().uri().optional().allow(""),
+    caption: Joi.string().optional().allow(""),
+    group: Joi.string().optional(),
+});
+
+export const mediaListItemResponseSchema = Joi.object<MediaListItemResponse>({
+    mediaId: Joi.string().required(),
+    originalFileName: Joi.string().required(),
+    mimeType: Joi.string().required(),
+    size: Joi.number().required(),
+    access: Joi.string().valid("public", "private").required(),
+    thumbnail: Joi.string().uri().optional().allow(""),
     caption: Joi.string().optional().allow(""),
     group: Joi.string().optional(),
 });
